--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build --no-lint",
     "build-static": "set NEXT_DISABLE_TYPES=1 && next build --no-lint",
     "start": "next start",
     "lint": "next lint"
