--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "next build --no-lint",
     "build-static": "set NEXT_DISABLE_TYPES=1 && next build --no-lint",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "wrangler pages deploy .next/static --project-name=festiveambience"
   },
   "dependencies": {
     "@react-three/drei": "^10.0.3",
